--- a/Client/src/main/java/com/coolioasjulio/spotify/ClientGUI.form
+++ b/Client/src/main/java/com/coolioasjulio/spotify/ClientGUI.form
@@ -48,7 +48,7 @@
                     </constraints>
                     <properties>
                       <font size="20"/>
-                      <text value="Members: 0"/>
+                      <text value="Not connected"/>
                     </properties>
                   </component>
                   <component id="3a314" class="javax.swing.JTextField" binding="joinCodeCreateField">
@@ -100,7 +100,7 @@
                     </constraints>
                     <properties>
                       <font size="20"/>
-                      <text value="Not Connected"/>
+                      <text value="Not connected"/>
                     </properties>
                   </component>
                   <component id="a63b7" class="javax.swing.JTextField" binding="joinCodeJoinField">
@@ -116,6 +116,43 @@
                       <font size="16"/>
                       <text value=""/>
                       <toolTipText value="Paste your join code here!"/>
+                    </properties>
+                  </component>
+                </children>
+              </grid>
+            </children>
+          </grid>
+          <grid id="b31ad" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+            <margin top="0" left="0" bottom="0" right="0"/>
+            <constraints>
+              <tabbedpane title="Options"/>
+            </constraints>
+            <properties/>
+            <border type="none"/>
+            <children>
+              <grid id="f980d" layout-manager="GridLayoutManager" row-count="2" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+                <margin top="0" left="0" bottom="0" right="0"/>
+                <constraints>
+                  <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+                </constraints>
+                <properties/>
+                <border type="none"/>
+                <children>
+                  <component id="2ebea" class="javax.swing.JButton" binding="logOutButton" default-binding="true">
+                    <constraints>
+                      <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                    </constraints>
+                    <properties>
+                      <text value="Log Out"/>
+                    </properties>
+                  </component>
+                  <component id="68491" class="javax.swing.JLabel" binding="usernameLabel">
+                    <constraints>
+                      <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                    </constraints>
+                    <properties>
+                      <font size="18"/>
+                      <text value="Error retrieving username!"/>
                     </properties>
                   </component>
                 </children>
