--- a/Client/src/main/java/com/coolioasjulio/spotify/ClientGUI.form
+++ b/Client/src/main/java/com/coolioasjulio/spotify/ClientGUI.form
@@ -122,7 +122,7 @@
               </grid>
             </children>
           </grid>
-          <grid id="b31ad" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+          <grid id="b31ad" layout-manager="GridLayoutManager" row-count="2" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
             <margin top="0" left="0" bottom="0" right="0"/>
             <constraints>
               <tabbedpane title="Options"/>
@@ -157,6 +157,14 @@
                   </component>
                 </children>
               </grid>
+              <component id="441a2" class="javax.swing.JLabel" binding="versionLabel">
+                <constraints>
+                  <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+                </constraints>
+                <properties>
+                  <text value="Spotify Party"/>
+                </properties>
+              </component>
             </children>
           </grid>
         </children>
